--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -4,9 +4,11 @@
     }
     
     .section-container {
-      padding: 16px;
       background: #ffffff;
       border-radius: 8px;
       margin-bottom: 24px;
     }    
-    
+    .zaui-page {
+      min-height: unset;
+      height: unset;
+    }
