--- a/src/css/product.css
+++ b/src/css/product.css
@@ -1,4 +1,4 @@
-.product-container {
+/* .product-container {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -22,12 +22,12 @@
   padding-bottom: 15px; 
 }
 .product:not(:last-child) {
-  border-bottom: 1px solid  #524f4f;/* Add border bottom to separate products */
+  border-bottom: 1px solid  #524f4f;
 }
 .product-image img {
-  width: 100px; /* Adjust the width as needed */
+  width: 100px; 
   height: auto;
-  margin-right: 20px; /* Space between image and text */
+  margin-right: 20px; 
   
 }
 
@@ -51,4 +51,63 @@
 .product-price {
   font-size: 16px;
   color: #22ec33;
+} */
+.uudai {
+  margin-top: -200px;
+}
+.uudai h2 {
+  margin-left: 20px;
+  font-size: 22px;
+  font-weight: bold;
+}
+
+.product-container {
+  display: flex;
+  flex-direction: column; /* Display products in a column */
+  align-items: center; /* Center products horizontally */
+  margin-top: 10px;
+}
+
+.product {
+  width: 80%; /* Adjust width as needed */
+  margin-bottom: 20px; /* Add space between products */
+  padding: 30px; /* Add padding around each product */
+  margin-left: 35px;
+  box-sizing: border-box; /* Include padding in width calculation */
+  border: 1px solid #ddd; /* Add a border around each product */
+  display: flex;
+}
+
+.product-image img {
+  width: 140px;
+  height: 90px;
+
+  margin-right: 20px; /* Ensure images don't overflow their container */
+}
+
+.product-details {
+  margin-top: 10px; /* Add space between image and details */
+  margin-left: 20px;
+}
+
+.product-name {
+  font-size: 18px;
+  margin-bottom: 5px;
+  margin-right: 10px;
+}
+
+.product-price {
+  font-size: 16px;
+  color: #333;
+}
+
+.fa-plus-circle {
+  color: green;
+  font-size: 24px;
+  margin-top: 10px; /* Adjust margin as needed */
+  margin-left: 80px;
+}
+
+.search {
+  margin-top: 1000px;
 }
