--- a/src/css/search.css
+++ b/src/css/search.css
@@ -15,7 +15,7 @@
   }
   
   .search-bar button {
-    background-color: #4CAF50;
+    background-color: #007bff;
     color: white;
     padding: 8px 16px;
     border: none;
@@ -26,5 +26,5 @@
   }
   
   .search-bar button:hover {
-    background-color: #45a049;
+    background-color: #0112ac;
   }
